{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "b62afc6b-3925-4fb8-ad7d-f3bc6e2834fe",
            "actions": [
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "c2b25b4e-25c7-4c76-b5ed-46b35305865c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "ac3b4feb-188e-4db5-8a05-3e4c1e089939",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "e65033d7-7043-48d5-8fd5-1685c1867560",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1),Invert",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "d81787c5-b899-4543-b04d-bad45c069543",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "bb48f509-dbab-432c-9f14-03de524e282b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c38e3686-97f5-46d1-889d-0553af4c36c3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6c75190c-8ec8-4418-a9a1-67c23c2d2111",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "382ce6ae-2d3e-4e6b-96da-a3cb6a654cf3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "560b585a-14b1-4080-bd95-1cbe92988b53",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "EQ",
                    "id": "cc9091bd-3a41-48c8-bdfe-bcba1e403b65",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9fc2c500-c3db-46e2-a707-ee4c18cda78f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ac5e3edd-930f-4a87-9637-4bb7bb4faf61",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e4a824a9-5d7a-4439-ab07-a1b6fcab2f30",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61610d82-8a36-4e35-a8c8-f38d39c82bb2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}